--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -40,6 +40,7 @@
         <button class="nav-tab" data-section="async">Async Behavior</button>
         <button class="nav-tab" data-section="advanced">Advanced</button>
         <button class="nav-tab" data-section="auth">Authentication</button>
+        <button class="nav-tab" data-section="basic-auth">HTTP Basic Auth</button>
     </nav>
 
     <main class="container">
@@ -389,6 +390,98 @@
                         <p class="stat">98%</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Section I: HTTP Basic Authentication -->
+        <section id="basic-auth" class="section">
+            <h2>🔒 HTTP Basic Authentication</h2>
+
+            <div class="info-box">
+                <h3>What is HTTP Basic Authentication?</h3>
+                <p>
+                    <strong>HTTP Basic Authentication</strong> is a simple authentication scheme built into the HTTP protocol.
+                    When a server requires authentication, the browser displays a native login dialog (not an HTML form)
+                    prompting for username and password. The credentials are sent as a Base64-encoded header with each request.
+                </p>
+
+                <div class="alert alert-warning" style="margin-top: 15px; padding: 12px; background: #fff3cd; border-left: 4px solid #ffc107; border-radius: 4px;">
+                    <strong>⚠️ Key Insight for Playwright Testers:</strong><br>
+                    The browser's Basic Auth dialog is <em>NOT</em> part of the DOM — you cannot use selectors like
+                    <code>page.fill()</code> or <code>page.click()</code> to interact with it. Dialog handlers like
+                    <code>page.on('dialog')</code> also do NOT work because Basic Auth prompts are handled at the
+                    browser/protocol level, not as JavaScript dialogs.
+                </p>
+            </div>
+
+            <div class="form-group" style="margin-top: 20px;">
+                <h3>🧪 Try the Protected Page</h3>
+                <p>Click the button below to access a page that simulates HTTP Basic Authentication:</p>
+
+                <div class="button-group">
+                    <a href="auth-protected/index.html" class="btn btn-primary" data-testid="basic-auth-link" target="_blank">
+                        🔐 Access Protected Page
+                    </a>
+                </div>
+
+                <div class="credentials-box" style="margin-top: 15px; padding: 15px; background: #e8f4f8; border-radius: 8px; border: 1px solid #bee5eb;">
+                    <h4 style="margin-top: 0; color: #0c5460;">📋 Test Credentials</h4>
+                    <table class="credentials-table" style="width: 100%; max-width: 300px;">
+                        <tr>
+                            <td><strong>Username:</strong></td>
+                            <td><code data-testid="basic-auth-username">admin</code></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Password:</strong></td>
+                            <td><code data-testid="basic-auth-password">secret123</code></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div class="form-group" style="margin-top: 25px;">
+                <h3>🎓 How to Handle Basic Auth in Playwright</h3>
+
+                <div class="method-cards">
+                    <div class="card" style="margin-bottom: 15px;">
+                        <h4>Method 1: httpCredentials in Config</h4>
+                        <pre style="background: #f4f4f4; padding: 10px; border-radius: 4px; overflow-x: auto;"><code>// playwright.config.ts
+use: {
+  httpCredentials: {
+    username: 'admin',
+    password: 'secret123'
+  }
+}</code></pre>
+                        <p class="hint">✅ Best for: Project-wide authentication</p>
+                    </div>
+
+                    <div class="card" style="margin-bottom: 15px;">
+                        <h4>Method 2: browser.newContext()</h4>
+                        <pre style="background: #f4f4f4; padding: 10px; border-radius: 4px; overflow-x: auto;"><code>const context = await browser.newContext({
+  httpCredentials: {
+    username: 'admin',
+    password: 'secret123'
+  }
+});</code></pre>
+                        <p class="hint">✅ Best for: Test-specific credentials</p>
+                    </div>
+
+                    <div class="card" style="margin-bottom: 15px;">
+                        <h4>Method 3: Inline URL Credentials</h4>
+                        <pre style="background: #f4f4f4; padding: 10px; border-radius: 4px; overflow-x: auto;"><code>await page.goto(
+  'https://admin:secret123@example.com/protected'
+);</code></pre>
+                        <p class="hint">⚠️ Use with caution: Credentials visible in URL/logs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" style="margin-top: 20px;">
+                <h3>📚 Example Tests</h3>
+                <p>
+                    See the example tests in <code>/examples/basic-auth/basic-auth.spec.ts</code> for
+                    complete working examples of all three methods with detailed comments.
+                </p>
             </div>
         </section>
     </main>
